rename properties and add failsafe plugin (config same as surefire)
Change-Id: Idc08a544210888337a699228bc870a36b2377c71